# cpp-samples

speech/streaming_transcribe/: CMakeLists.txt  README.md  infinite_transcribe.cc  streaming_transcribe.cc  vcpkg.json
speech/streaming_transcribe/vcpkg-overlay/google-cloud-cpp/: portfile.cmake  vcpkg.json
